--- a/assets/src/scss/layouts/_all.scss
+++ b/assets/src/scss/layouts/_all.scss
@@ -11,10 +11,6 @@ Main
 -------------------------------------------------*/
 @import "main";
 /*-------------------------------------------------
-Active
--------------------------------------------------*/
-@import "active";
-/*-------------------------------------------------
 Footer
 -------------------------------------------------*/
 @import "footer";
@@ -22,4 +18,7 @@ Footer
 Copyright
 -------------------------------------------------*/
 @import "copyright";
-
+/*-------------------------------------------------
+Carousel
+-------------------------------------------------*/
+@import "carousel";
