--- a/assets/src/scss/_bootstrap.scss
+++ b/assets/src/scss/_bootstrap.scss
@@ -1,5 +1,3 @@
-@import "settings";
-
 @import "../../../node_modules/bootstrap/scss/functions";
 @import "../../../node_modules/bootstrap/scss/variables";
 @import "../../../node_modules/bootstrap/scss/mixins";
@@ -9,8 +7,9 @@
 @import "../../../node_modules/bootstrap/scss/type";
 @import "../../../node_modules/bootstrap/scss/images";
 //@import "../../../node_modules/bootstrap/scss/code";
+@import "../../../node_modules/bootstrap/scss/carousel";
 @import "../../../node_modules/bootstrap/scss/grid";
-//@import "../../../node_modules/bootstrap/scss/tables";
+@import "../../../node_modules/bootstrap/scss/tables";
 @import "../../../node_modules/bootstrap/scss/forms";
 @import "../../../node_modules/bootstrap/scss/buttons";
 @import "../../../node_modules/bootstrap/scss/transitions";
@@ -33,5 +32,4 @@
 //@import "../../../node_modules/bootstrap/scss/modal";
 //@import "../../../node_modules/bootstrap/scss/tooltip";
 //@import "../../../node_modules/bootstrap/scss/popover";
-//@import "../../../node_modules/bootstrap/scss/carousel";
 @import "../../../node_modules/bootstrap/scss/utilities";
