--- a/assets/src/scss/layouts/_block.scss
+++ b/assets/src/scss/layouts/_block.scss
@@ -4,10 +4,88 @@
   background-color: $white;
   border-radius: $border-radius;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
-
-
-
-
+}
+.slick-initialized .slick-slide {
+  display: block;
+  filter: alpha(opacity=40);
+  opacity: 0.4;
+  transition: all 0.3s ease-out;
 }
 
+.slick-initialized .slick-center {
+  display: block;
+  filter: alpha(opacity=100);
+  opacity: 1;
+  transition: all 0.3s ease-out;
+}
+
+.wrapper {
+  width: 60%;
+  margin: 0 auto;
+
+  h2 {
+    color: #3498DB;
+    opacity: .85;
+    font-family: 'Pacifico';
+    font-weight: 100;
+    letter-spacing: 1px;
+    font-size: 36px;
+    margin: 15px 0;
+  }
+}
+
+.slick-codepen {
+  width: 100%;
+  height: 340px;
+  background-color: #141414;
+
+  .slick-slide {
+    height: 340px !important;
+
+    img {
+      margin: 0;
+      padding: 0;
+      display: block;
+      height: 100%;
+    }
+  }
+
+  .slick-prev { left: 0; }
+  .slick-next { right: 0; }
+
+  .slick-prev, .slick-next {
+    background-color: rgba(0, 0, 0, 0);
+    top: 10px;
+    width: 20%;
+    height: 100%;
+    transition: all 0.3s ease-out 0s;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.25);
+
+      &:before { color: rgba(255, 255, 255, 0.65); }
+    }
+
+    &:before {
+      font-size: 38px;
+      color: rgba(0,0,0,0);
+      transition: all 0.3s ease-out;
+    }
+  }
+
+  .slick-dots {
+    width: 22%;
+    left: 40%;
+    bottom: -68px;
+    border-bottom: 1px solid #3498DB;
+    padding: 15px 0;
+
+    li.slick-active button:before { color: #3498DB; margin-top: 1px; font-size: 10px;}
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .slick-codepen, .slick-codepen .slick-slide { height: 220px; }
+  .wrapper { width: 100%; }
+}
 
